lead set-up: local-static